RMR-5 Fixed z-index; mobile-first done

--- a/src/components/CharacterList/CharacterList.module.scss
+++ b/src/components/CharacterList/CharacterList.module.scss
@@ -18,6 +18,8 @@
 }
 
 .pagination {
+  position: relative;
+  z-index: 999;
   margin-top: 2vh;
 }
 
