--- a/src/components/Filters/Filters.module.scss
+++ b/src/components/Filters/Filters.module.scss
@@ -1,4 +1,6 @@
 .filters {
+    position: relative;
+    z-index: 999;
     margin-top: 8vh;
 }
 
